(executable
 (name passwords)
 (modules Passwords)
 (libraries batteries))
(executable
 (name compwires)
 (modules Compwires)
 (libraries batteries))
(executable
 (name seqwires)
 (modules Seqwires)
 (libraries batteries))
(executable
 (name button)
 (modules Button)
 (libraries batteries)
 (preprocess (pps ppx_deriving.show)))
